--- a/styles/download.css
+++ b/styles/download.css
@@ -1,5 +1,5 @@
 .download {
-  @apply bg-[url('./images/background/app-bg.png')] w-full h-[450px] bg-cover bg-no-repeat;
+  @apply bg-[url('/images/background/app-bg.png')] w-full h-[450px] bg-cover bg-no-repeat;
 }
 .download-col {
   @apply w-full md:w-8/12 lg:w-6/12 xl:w-5/12;
